--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -9,6 +9,10 @@
 	<link href="resources/img/fav.ico" rel="icon">
 	<style type="text/css">
 
+	body {
+		height: 200px;
+	}
+
 	.resultado {
 		padding: 15px 0px; 
 	}
@@ -16,6 +20,12 @@
 	.img-copy{
 		width:20px; 
 		height:20px
+	}
+
+	footer {
+		height: 25px;
+		position: relative;
+
 	}
 
 	</style>
@@ -41,11 +51,17 @@
 		
 
 		<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
-  Launch demo modal
-</button>
+		<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+		  Launch demo modal
+		</button>
 
 	</section>
+
+	<footer class="container">
+		<div>
+			<a class="git" ><img class="img-copy" src="resources/img/git.png" alt="git"></a>
+		</div>
+	</footer>
 
 
 
