--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -21,15 +21,15 @@
 
 <div class="header">
     <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-        <a class="pure-menu-heading" href=""></a>
+        <a class="pure-menu-heading" href="#">E-url</a>
 
         <ul class="pure-menu-list">
             <li class="pure-menu-item pure-menu-selected">
                 <a href="index.html" class="pure-menu-link">Home</a></li>
             <li class="pure-menu-item" >
                 <a href="lista.html" class="pure-menu-link" id="dez-mais">Dez mais</a></li>
-            <li class="pure-menu-item">
-                <a href="#" class="pure-menu-link">Sign Up</a></li>
+           <li class="pure-menu-item">
+                <a href="servico.html" class="pure-menu-link">Serviços</a></li>
         </ul>
     </div>
 </div>
@@ -64,13 +64,8 @@
 
                         <button type="submit" class="pure-button">Gerar link simplificado</button>
 
-
                     </fieldset>
-                </form>
-
-                        <button type="submit" class="pure-button" id="show">Show</button>
-                        <button type="submit" class="pure-button" id="hide">Hide</button>                
-
+                </form>            
             </div>
 
             <div class="l-box-lrg pure-u-1 pure-u-md-3-5">
@@ -92,7 +87,7 @@
     </div>
 
     <div class="footer l-box is-center">
-        <img class="img-footer" src="img/ghub.png" alt=""> https://github.com/alanstos/ 
+        <img class="img-footer" src="img/ghub.png" > https://github.com/alanstos/ 
     </div>
 
 </div>
