--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -57,7 +57,7 @@
                     <fieldset>
 
                         <label for="url">URL</label>
-                        <input id="url" type="text" placeholder="Digite aqui seu link. Ex.: www.google.com.br">
+                        <input id="url" type="text" placeholder="Digite aqui seu link. Ex.: www.google.com.br" required>
 
                         <label for="key">Alias</label>
                         <input id="key" type="text" placeholder="Digite um alias para seu link. Ex.: meunick">                        
